Complete styles, images and text

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <div class="main_container">
         <div class="header">
-            <img class="header_logo" src="./images/h_logo.png" alt="TFCT logo">
+            <img class="header_logo" src="./images/logo.jpg" alt="TFCT logo">
             <ul>
-                <li><a href="https://github.com/TomasFCT" target="_blank">My GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/tomascornejo/" target="_blank">My LinkedIn</a></li>
-                <li><a href="https://www.linkedin.com/in/tomascornejo/" target="_blank">My 3rd link</a></li>
+                <li><a href="https://github.com/TomasFCT" target="_blank">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/tomascornejo/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/tomasfelipect/" target="_blank">Instagram</a></li>
             </ul>
         </div>
         <div class="content">
             <div class="content1">
                 <div class="card1">
-                    <div class="cd1_header">HELLO!</div>
-                    <div class="cd1_text">My name is Tomás Cornejo, I'm a student of the TOP (Odin Project) and this is my first landing page! My goal now is to learn everything I possibly can for becoming an expert web developer.</div>
+                    <div class="cd1_header">Hello! this website is about Tomás Cornejo</div>
+                    <div class="cd1_text">I'm a student of the TOP (Odin Project) and this is my first landing page! My goal now is to learn everything I can about HTML, CSS and JavaScript for becoming a decent web developer. This site in particular was built using CSS's flex properties.</div>
                     <a class="cd1_link" href="https://www.theodinproject.com/about" target="_blank">
                         Find more about TOP
                     </a>
@@ -28,35 +28,38 @@
                 <img class="c1_image" src="./images/c1.gif" alt="Tomás Cornejo Cyberpunk background">
             </div>
             <div class="content2">
-                <div class="c2_header">Random information about me:</div>
+                <div class="c2_header">Some information about me</div>
                 <div class="card2">
                     <div class="c2_pack">
-                        <img class="c2_image" src="" alt="">
-                        <div class="c2_text">First random fact about Tomás Felipe Cornejo Taboada</div>
+                        <img class="c2_image" src="./images/marketing.png" alt="marketing man sticker">
+                        <div class="c2_text">I'm an <strong>advertising professional</strong> and have worked in SEO and copywriting. Marketing has given me valuable lessons about world and people.</div>
                     </div>
                     <div class="c2_pack">
-                        <img class="c2_image" src="" alt="">
-                        <div class="c2_text">Second random fact about Tomás Felipe Cornejo Taboada</div>
+                        <img class="c2_image" src="./images/football.png" alt="soccer ball sticker">
+                        <div class="c2_text">As an average Colombian kid, soccer caught my attention 27 years ago. My favorite clubs are <strong>Independiente Santa Fe</strong> and Inter Milan.</div>
                     </div>
                     <div class="c2_pack">
-                        <img class="c2_image" src="" alt="">
-                        <div class="c2_text">Third random fact about Tomás Felipe Cornejo Taboada</div>
+                        <img class="c2_image" src="./images/games.png" alt="videogame console sticker">
+                        <div class="c2_text">Likewise, as an average <strong>90's kid</strong>, video games have been fundamental to me. Mostly Souls, LOL and some battle royales.</div>
                     </div>
                     <div class="c2_pack">
-                        <img class="c2_image" src="" alt="">
-                        <div class="c2_text">Fourth random fact about Tomás Felipe Cornejo Taboada</div>
+                        <img class="c2_image" src="./images/book.png" alt="book sticker">
+                        <div class="c2_text"><strong>I love reading</strong> fiction, non-fiction, poetry, comics, you name it. It's the only thing I've devoted more time to over the years than video games.</div>
                     </div>               
                 </div>
             </div>
             <div class="content3">
-                <div class="c3_text">"Here will appear a nice Charles Bukowski quote"</div>
-                <div class="c3_signature">Charles Bukowski</div>
+                <div class="c3_text"><em>“We're all going to die, all of us, what a circus! That alone should make us love each other but it doesn't. We are terrorized and flattened by trivialities, we are eaten up by nothing.”</em>
+                    <div class="c3_signature">― Charles Bukowski</div>
+                </div>     
             </div>
             <div class="content4">
-                <div class="card4">
-                    <div class="cd4_header">Let's chat!</div>
-                    <div class="cd4_text">Interested in creating something tohether? -></div>
-                    <button class="bt_contact">Send me a message</button>
+                <div class="container4">
+                    <div class="card4">
+                        <div class="cd4_header">Let's chat!</div>
+                        <div class="cd4_text">Interested in creating something tohether?</div>
+                    </div>
+                    <a class="bt_contact" href="https://www.linkedin.com/in/tomascornejo/" target="_blank">Add me to your network</a>
                 </div>
             </div>
         </div>
